Closed
Bug 1344752
Opened 8 years ago
Closed 8 years ago
Crash in mozilla::widget::TextEventDispatcher::GetState
Categories
(Core Graveyard :: Widget: Android, defect)
Tracking
(firefox52 unaffected, firefox-esr52 unaffected, firefox53 unaffected, firefox54 fixed, firefox55 fixed)
RESOLVED
FIXED
mozilla55
Tracking | Status | |
---|---|---|
firefox52 | --- | unaffected |
firefox-esr52 | --- | unaffected |
firefox53 | --- | unaffected |
firefox54 | --- | fixed |
firefox55 | --- | fixed |
People
(Reporter: marcia, Assigned: jchen)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
2.98 KB,
patch
|
esawin
:
review+
gchang
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-bec2c3ac-cbd5-41c8-b7c7-e21ac2170304.
=============================================================
Seen while looking at nightly crash stats. Crashes started using 20170303110215 build.
Possible regression range: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=e91de6fb2b3dce9c932428265b0fdb630ea470d7&tochange=9732cd019a8b94c49a275661320c1b742635a3d6
Bug 1137567 is in the range and touched code in that area. ni on jchen.
Flags: needinfo?(nchen)
Assignee | ||
Updated•8 years ago
|
Assignee: nobody → nchen
Status: NEW → ASSIGNED
Flags: needinfo?(nchen)
Comment 1•8 years ago
|
||
Device: Huawei MediaPad M2 - Android 5.1.1;
Build: Nightly 54.0a1 (2017-03-06).
I was able to reproduce this crash following the steps:
1. Open Fennec;
2. Go to Settings -> Sign in;
3. Create a new account. After I tapped the password and complete the age field, Fennec crashed.
Assignee | ||
Comment 2•8 years ago
|
||
Inside OnImeReplaceText, an action can cause the editor to blur and
mDispatcher to be reset. We should guard against that and abandon
subsequent actions.
Attachment #8844675 -
Flags: review?(esawin)
Updated•8 years ago
|
Attachment #8844675 -
Flags: review?(esawin) → review+
Pushed by nchen@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/72479abe0124
Guard against blurring when replacing text; r=esawin
Comment 4•8 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment 5•8 years ago
|
||
Please request Aurora approval on this when you get a chance.
status-firefox52:
--- → unaffected
status-firefox53:
--- → unaffected
status-firefox-esr52:
--- → unaffected
Flags: needinfo?(nchen)
Assignee | ||
Comment 6•8 years ago
|
||
Comment on attachment 8844675 [details] [diff] [review]
Guard against blurring when replacing text (v1)
Approval Request Comment
[Feature/Bug causing the regression]: Bug 1137567
[User impact if declined]: Crash when inputting text in some cases
[Is this code covered by automated tests?]: No
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]: None
[Is the change risky?]: No
[Why is the change risky/not risky?]: Patch only covers cases where we used to crash.
[String changes made/needed]: None
Flags: needinfo?(nchen)
Attachment #8844675 -
Flags: approval-mozilla-aurora?
Comment 7•8 years ago
|
||
Comment on attachment 8844675 [details] [diff] [review]
Guard against blurring when replacing text (v1)
Fix a crash. Aurora54+.
Attachment #8844675 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 8•8 years ago
|
||
I can confirm that this is fixed on latest Nightly following the steps from comment 1. Fennec doesn't crash when a new account is made.
Comment 9•8 years ago
|
||
bugherder uplift |
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•