Bug 1344752 - Guard against blurring when replacing text. r=esawin, a=gchang

Inside OnImeReplaceText, an action can cause the editor to blur and
mDispatcher to be reset. We should guard against that and abandon
subsequent actions.

--HG--
extra : source : 72479abe01240e9a7a4f49dca9abf2d84b264f74