widget/android/GeckoEditableSupport.cpp
@@ -798,7 +798,7 @@ GeckoEditableSupport::OnImeReplaceText(int32_t aStart, int32_t aEnd,
                     mDispatcher->DispatchKeyboardEvent(
                             event->mMessage, *event, status);
                 }
-                if (widget->Destroyed()) {
+                if (!mDispatcher || widget->Destroyed()) {
                     break;
                 }
             }
@@ -812,7 +812,7 @@ GeckoEditableSupport::OnImeReplaceText(int32_t aStart, int32_t aEnd,
                     true, eContentCommandDelete, widget);
             event.mTime = PR_Now() / 1000;
             widget->DispatchEvent(&event, status);
-            if (widget->Destroyed()) {
+            if (!mDispatcher || widget->Destroyed()) {
                 return;
             }
         }
@@ -829,7 +829,7 @@ GeckoEditableSupport::OnImeReplaceText(int32_t aStart, int32_t aEnd,
 
     if (mInputContext.mMayBeIMEUnaware) {
         SendIMEDummyKeyEvent(widget, eKeyDown);
-        if (widget->Destroyed()) {
+        if (!mDispatcher || widget->Destroyed()) {
             return;
         }
     }
@@ -842,7 +842,7 @@ GeckoEditableSupport::OnImeReplaceText(int32_t aStart, int32_t aEnd,
     } else if (!string.IsEmpty() || mDispatcher->IsComposing()) {
         mDispatcher->CommitComposition(status, &string);
     }
-    if (widget->Destroyed()) {
+    if (!mDispatcher || widget->Destroyed()) {
         return;
     }
 
